// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Server Utils > decrypt > decrypts data encrypted by encrypt() 1`] = `"Hello world"`;

exports[`Server Utils > decryptKmsDataKey > decrypts CiphertextBlob and returns Plaintext 1`] = `"cGxhaW50ZXh0X21vY2s="`;

exports[`Server Utils > generateKmsDataKey > returns CiphertextBlob and Plaintext 1`] = `
{
  "CiphertextBlob": "cipher_mock",
  "Plaintext": "plaintext_mock",
}
`;

exports[`Server Utils > hashPasswordAction > correctly hashes password 1`] = `true`;

exports[`Server Utils > isPasswordPwned > returns 0 if the password has not been leaked 1`] = `0`;

exports[`Server Utils > isPasswordPwned > returns greater than 0 if the password has been leaked 1`] = `707`;

exports[`Server Utils > isPasswordPwned > returns object if function fails 1`] = `
{
  "message": "Unknown error from exposed password checking.",
  "ok": false,
}
`;

exports[`Server Utils > sendResetPasswordConfirmation > returns successful message 1`] = `
{
  "message": "Code sent!",
  "ok": true,
}
`;

exports[`Server Utils > sendResetPasswordConfirmation > returns unsuccessful message when email is empty 1`] = `
{
  "message": "Invalid email",
  "ok": false,
}
`;

exports[`Server Utils > sendResetPasswordConfirmation > returns unsuccessful message when email is invalid 1`] = `
{
  "message": "Invalid email",
  "ok": false,
}
`;

exports[`Server Utils > sendResetPasswordConfirmation > returns unsuccessful message when email is not found 1`] = `
{
  "message": "Email not found",
  "ok": false,
}
`;

exports[`Server Utils > sendResetPasswordConfirmation > throws when insertion into database fails 1`] = `
{
  "message": "Password confirmation error: Error: Mock Error",
  "ok": false,
}
`;

exports[`Server Utils > signedOnlyWithProvider > returns false if either password or user_password_key are not null 1`] = `false`;

exports[`Server Utils > signedOnlyWithProvider > returns true if password & user_password_key are 'null' 1`] = `true`;

exports[`Server Utils > verifyPasswordAction > returns false if verification fails 1`] = `false`;

exports[`Server Utils > verifyPasswordAction > verifies password with Argon2 and returns true 1`] = `true`;
